# scopehal-apps

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  create-tarballs.sh  ctest-custom.cmake  flake.nix  macox.md  release-info.cmake.in
devdoc/: CMakeLists.txt  Introduction.md
examples/freqresp/: CMakeLists.txt  main.cpp
glscopeclient/: CMakeLists.txt  ChannelPropertiesDialog.cpp  ChannelPropertiesDialog.h  Framebuffer.cpp  Framebuffer.h  HaltConditionsDialog.cpp  HaltConditionsDialog.h  HistoryWindow.cpp  HistoryWindow.h  InstrumentConnectionDialog.cpp  InstrumentConnectionDialog.h  MeasurementDialog.cpp  MeasurementDialog.h  OscilloscopeWindow.cpp  OscilloscopeWindow.h  Preference.cpp  Preference.h  PreferenceDialog.cpp  PreferenceDialog.h  PreferenceManager.cpp  PreferenceManager.h  ProfileBlock.h  Program.cpp  Program.h  ProtocolAnalyzerWindow.cpp  ProtocolAnalyzerWindow.h  ProtocolDecoderDialog.cpp  ProtocolDecoderDialog.h  ScopeApp.cpp  ScopeApp.h  ScopeSyncWizard.cpp  ScopeSyncWizard.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  TimebasePropertiesDialog.cpp  TimebasePropertiesDialog.h  (+21 more)
glscopeclient/gradients/: eye-gradient-ironbow.rgba  eye-gradient-rainbow.rgba  eye-gradient-viridis.rgba
glscopeclient/shaders/: cairo-fragment.glsl  cairo-vertex.glsl  colormap-fragment.glsl  eye-fragment.glsl  persist-fragment.glsl  persist-vertex.glsl  waveform-compute.glsl  waveform-fragment.glsl  waveform-vertex.glsl
glscopeclient/styles/: glscopeclient.css
scopeclient/: CMakeLists.txt  DMMWindow.cpp  DMMWindow.h  OscilloscopeView.cpp  OscilloscopeView.h  OscilloscopeWindow.cpp  OscilloscopeWindow.h  PSUWindow.cpp  PSUWindow.h  ProtocolDecoderDialog.cpp  ProtocolDecoderDialog.h  ScopeConnectionDialog.cpp  ScopeConnectionDialog.h  build.yml  main.cpp  scopeclient.h
src/diffs2p/: CMakeLists.txt  main.cpp
src/examples/curvetrace/: CMakeLists.txt  main.cpp
src/examples/fgtest/: CMakeLists.txt  main.cpp
src/examples/ibistest/: CMakeLists.txt  main.cpp
src/examples/scopevna/: CMakeLists.txt  main.cpp
src/examples/usbcsv/: CMakeLists.txt  main.cpp
src/glscopeclient/: CMakeLists.txt  ChannelPropertiesDialog.cpp  ChannelPropertiesDialog.h  Event.h  FileProgressDialog.cpp  FileProgressDialog.h  FileSystem.cpp  FileSystem.h  FilterDialog.cpp  FilterDialog.h  FilterGraphEditor.cpp  FilterGraphEditor.h  FilterGraphEditorWidget.cpp  FilterGraphEditorWidget.h  Framebuffer.cpp  Framebuffer.h  FunctionGeneratorDialog.cpp  FunctionGeneratorDialog.h  HaltConditionsDialog.cpp  HaltConditionsDialog.h  HistoryWindow.cpp  HistoryWindow.h  HzClock.h  InstrumentConnectionDialog.cpp  InstrumentConnectionDialog.h  Marker.h  MultimeterConnectionDialog.cpp  MultimeterConnectionDialog.h  MultimeterDialog.cpp  MultimeterDialog.h  OscilloscopeWindow.cpp  OscilloscopeWindow.h  Preference.cpp  Preference.h  PreferenceDialog.cpp  PreferenceDialog.h  PreferenceManager.cpp  PreferenceManager.h  PreferenceSchema.cpp  PreferenceTree.cpp  (+51 more)
src/glscopeclient/gradients/: eye-gradient-grayscale.rgba  eye-gradient-reverse-rainbow.rgba
src/glscopeclient/kernels/: WaveformRendering.cl
src/glscopeclient/masks/: 100basetx.yml  dphy-inneronly.yml  dphy.yml  hdmi-1.4-cerelay-tp5.yml  hdmi-1.4-sink-tp2.yml  kintex7-oversampling-rx.yml  kintex7-rx.yml  pcie-gen2-5gbps-rx.yml  sgmii.yml  xfi.yml
src/glscopeclient/shaders/: CMakeLists.txt  cairo-fragment.glsl  cairo-vertex.glsl  colormap-fragment.glsl  eye-fragment.glsl  spectrogram-fragment.glsl  spectrogram-vertex.glsl  waveform-compute-analog-noint64.glsl  waveform-compute-analog.glsl  waveform-compute-core.glsl  waveform-compute-digital-noint64.glsl  waveform-compute-digital.glsl  waveform-compute-head-dense-noint64.glsl  waveform-compute-head-dense.glsl  waveform-compute-head-noint64.glsl  waveform-compute-head.glsl  waveform-compute-histogram-noint64.glsl  waveform-compute-histogram.glsl  waveform-compute.glsl
src/glscopeclient/styles/: glscopeclient.css
src/glscopeclient/wix/: LICENSE.rtf  glscopeclient.wxs.in  license-paths
src/ngscopeclient/: AboutDialog.cpp  AboutDialog.h  AddBERTDialog.cpp  AddBERTDialog.h  AddGeneratorDialog.cpp  AddGeneratorDialog.h  AddInstrumentDialog.cpp  AddInstrumentDialog.h  AddLoadDialog.cpp  AddLoadDialog.h  AddMiscDialog.cpp  AddMiscDialog.h  AddMultimeterDialog.cpp  AddMultimeterDialog.h  AddPowerSupplyDialog.cpp  AddPowerSupplyDialog.h  AddRFGeneratorDialog.cpp  AddRFGeneratorDialog.h  AddSDRDialog.cpp  AddSDRDialog.h  AddScopeDialog.cpp  AddScopeDialog.h  AddSpectrometerDialog.cpp  AddSpectrometerDialog.h  AddVNADialog.cpp  AddVNADialog.h  BERTDialog.cpp  BERTDialog.h  BERTInputChannelDialog.cpp  BERTInputChannelDialog.h  BERTOutputChannelDialog.cpp  BERTOutputChannelDialog.h  BERTState.h  BERTThread.cpp  BaseChannelPropertiesDialog.cpp  BaseChannelPropertiesDialog.h  CMakeLists.txt  ChannelPropertiesDialog.cpp  ChannelPropertiesDialog.h  CreateFilterBrowser.cpp  (+136 more)
src/ngscopeclient/icons/: LicensingNotes.txt  OpenIconLibraryLicensing.txt
src/ngscopeclient/macos/: Info.plist  MoltenVK_icd.json  ngscopeclient.sh  signing.cmake
src/ngscopeclient/masks/: can-10m.yml  dp-aux.yml  dp-diepad-hbr2.yml  dp-tp1-hbr.yml  dp-tp1-hbr2.yml  dp-tp1-rbr.yml  dp-tp4-hbr.yml  dphy.yml  (+7 more)
src/psuclient/: CMakeLists.txt  MainWindow.cpp
src/reflowmon/: CMakeLists.txt  MainWindow.cpp  reflowmon.h
tests/Acceleration/: Acceleration.h  Buffers.cpp  CMakeLists.txt  main.cpp
tests/Filters/: CMakeLists.txt  Filter_ACRMS.cpp  Filter_Add.cpp  Filter_DeEmbed.cpp  Filter_EyePattern.cpp  Filter_FFT.cpp  Filter_FIR.cpp  Filter_Subtract.cpp  Filter_Upsample.cpp  Filters.h  FrequencyMeasurement.cpp  SubtractFilter.cpp  main.cpp
tests/FrequencyMeasurement/: CMakeLists.txt  main.cpp
tests/Primitives/: Averager.cpp  BlackmanHarrisWindow.cpp  CMakeLists.txt  Convert16BitSamples.cpp  Convert8BitSamples.cpp  DualFFT.cpp  EdgeDetection.cpp  Primitives.h  Sampling.cpp  main.cpp
tests/Vulkan/: CMakeLists.txt  main.cpp
(+99 files in other folders)
